feat: get annotations and annotation